--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome</div>
-                <div class="masthead-heading text-uppercase">Homepage</div>
+                <div class="masthead-subheading">Hello</div>
+                <div class="masthead-heading text-uppercase">Introduction</div>
             </div>
         </header>
         <!-- Services-->
