--- a/page-two.html
+++ b/page-two.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Narrative Website</title>
+        <title>Agency - Start Bootstrap Theme</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Page Two</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Page Three</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-four.html">Page Four</a></li>
+
                     </ul>
                 </div>
             </div>
@@ -39,11 +40,30 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Hello</div>
-                <div class="masthead-heading text-uppercase">Introduction</div>
+                <div class="masthead-subheading">Welcome</div>
+                <div class="masthead-heading text-uppercase">Page Two</div>
             </div>
         </header>
-        
+        <!-- Services-->
+        <section class="page-section" id="services">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">In-Page Navigation</h2>               
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>              
+                    </div>
+                    <div class="col-md-4">
+                         <a class="btn btn-primary btn-xl text-uppercase" href="#about">Timeline</a> 
+                    </div>
+                    <div class="col-md-4">                     
+                        <a class="btn btn-primary btn-xl text-uppercase" href="#team">Team</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
