--- a/page-four.html
+++ b/page-four.html
@@ -173,7 +173,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><a href="index.html"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></a></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2009-2011</h4>
