--- a/page-three.html
+++ b/page-three.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="masthead heroimagethree">
             <div class="container">
                 <div class="masthead-subheading">Welcome</div>
                 <div class="masthead-heading text-uppercase">Page Three</div>
